--- a/sfml_engine/keys.cfg
+++ b/sfml_engine/keys.cfg
@@ -2,13 +2,17 @@ Window_close 0:0
 Fullscreen_toggle 5:89
 Intro_continue 5:57
 Mouse_left 9:0
+Key_Tilde 5:54
 Key_Escape 5:36
 Key_P 5:15
 Key_T 5:19
 Key_K 5:10
 Key_O 5:14
 Key_X 5:23
+Key_Return 5:58
+Key_Backspace 5:59
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
 Player_Jump 5:57
 Player_Attack 24:58
+Text_Entered 4:0
