added console animation, command cycling

--- a/sfml_engine/keys.cfg
+++ b/sfml_engine/keys.cfg
@@ -11,6 +11,8 @@ Key_O 5:14
 Key_X 5:23
 Key_Return 5:58
 Key_Backspace 5:59
+Key_Up 5:73
+Key_Down 5:74
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
 Player_Jump 5:57
