--- a/sfml_engine/keys.cfg
+++ b/sfml_engine/keys.cfg
@@ -13,6 +13,8 @@ Key_Return 5:58
 Key_Backspace 5:59
 Key_Up 5:73
 Key_Down 5:74
+Key_Left 5:71
+Key_Right 5:72
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
 Player_Jump 5:57
