begin console scrollbar impl

--- a/sfml_engine/keys.cfg
+++ b/sfml_engine/keys.cfg
@@ -12,6 +12,8 @@ Key_O 5:14
 Key_X 5:23
 Key_Return 5:58
 Key_Backspace 5:59
+Key_PageUp 5:61
+Key_PageDown 5:62
 Key_Up 5:73
 Key_Down 5:74
 Key_Left 5:71
