now builds on windows

--- a/code/keys.cfg
+++ b/code/keys.cfg
@@ -2,6 +2,7 @@ Window_close 0:0
 Fullscreen_toggle 5:89
 Intro_continue 5:57
 Mouse_left 9:0
+Mouse_Left_Release 10:0
 Key_Tilde 5:54
 Key_Shift 5:38
 Key_Escape 5:36
@@ -23,3 +24,5 @@ Player_MoveRight 24:3
 Player_Jump 5:57
 Player_Attack 24:58
 Text_Entered 4:0
+MainMenu_Play 27:MainMenu:Play
+MainMenu_Quit 27:MainMenu:Quit
