you can now move in four directions!

--- a/assets/keys.cfg
+++ b/assets/keys.cfg
@@ -21,6 +21,8 @@ Key_Left 5:71
 Key_Right 5:72
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
+Player_MoveUp 24:22
+Player_MoveDown 24:18
 Player_Jump 5:57
 Player_Attack 24:58
 Text_Entered 4:0
